ответ успешно возвращается. customer_notified=0

--- a/language/en-GB/en-GB.plg_vmpayment_arsenalpay.ini
+++ b/language/en-GB/en-GB.plg_vmpayment_arsenalpay.ini
@@ -1,3 +1,5 @@
+ARSENALPAY_PAYMENT_NAME="ArsenalPay payment name"
+ARSENALPAY_PAYMENT_TOTAL_CURRENCY="ArsenalPay total currency"
 VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_WAITING="Payment waited by ArsenalPay"
 VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CONFIRMED="Payment confirmed by ArsenalPay"
 VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CANCELLED="Payment cancelled by Arsenalpay"
