--- a/language/ru-RU/ru-RU.plg_vmpayment_arsenalpay.ini
+++ b/language/ru-RU/ru-RU.plg_vmpayment_arsenalpay.ini
@@ -1,3 +1,5 @@
+ARSENALPAY_PAYMENT_NAME="Название платежного метода ArsenalPay"
+ARSENALPAY_PAYMENT_TOTAL_CURRENCY="Общая сумма платежа с ArsenalPay"
 VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_WAITING="Ожидаемый к оплате платеж с ArsenalPay"
 VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CONFIRMED="Платеж подтвержден ArsenalPay"
 VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CANCELLED="Платеж отменен ArsenalPay"
