--- a/language/ru-RU/ru-RU.plg_vmpayment_arsenalpay.ini
+++ b/language/ru-RU/ru-RU.plg_vmpayment_arsenalpay.ini
@@ -3,43 +3,40 @@ ARSENALPAY_PAYMENT_TOTAL_CURRENCY="Общая сумма платежа с Arsen
 VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_WAITING="Ожидаемый к оплате платеж с ArsenalPay"
 VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CONFIRMED="Платеж подтвержден ArsenalPay"
 VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CANCELLED="Платеж отменен ArsenalPay"
+
 VMPAYMENT_ARSENALPAY_SETUP_SECTION="Настройка параметров ArsenalPay"
 VMPAYMENT_ARSENALPAY_SETUP_DESC="Основые настройки платежного плагина ArsenalPay."
-VMPAYMENT_ARSENALPAY_FRAME_URL="URL-адрес фрейма"
 VMPAYMENT_ARSENALPAY_UNIQUE_ID="Уникальный токен"
-VMPAYMENT_ARSENALPAY_UNIQUE_ID_DESC="Присваивается мерчанту для начала работы с платежным фреймом."
+VMPAYMENT_ARSENALPAY_UNIQUE_ID_DESC="Присваивается предприятию для доступа к платежному фрейму."
+VMPAYMENT_ARSENALPAY_FRAME_URL="URL-адрес фрейма"
+VMPAYMENT_ARSENALPAY_FRAME_URL_DESC="URL-адрес платежного фрейма ArsenalPay."
 VMPAYMENT_ARSENALPAY_PAYMENT_SRC="Тип оплаты"
-VMPAYMENT_ARSENALPAY_PAYMENT_SRC_DESC="«mk» - оплата с мобильного телефона (мобильная коммерция),
-«card» - оплата с пластиковой карты (интернет эквайринг)"
-VMPAYMENT_ARSENALPAY_SIGN_KEY="Ключ"
-VMPAYMENT_ARSENALPAY_SIGN_KEY_DESC="Для проверки подписи обратных запросов."
+VMPAYMENT_ARSENALPAY_PAYMENT_SRC_DESC="mk - оплата с мобильного телефона (мобильная коммерция). card - оплата с пластиковой карты (интернет эквайринг)."
 VMPAYMENT_ARSENALPAY_CSS_FILE="Параметр css"
-VMPAYMENT_ARSENALPAY_CSS_FILE_DESC="Адрес (URL) CSS файла для применения к внешнему виду iFrame"
+VMPAYMENT_ARSENALPAY_CSS_FILE_DESC="Aдрес (URL) CSS файла."
+VMPAYMENT_ARSENALPAY_SIGN_KEY="Ключ (key)"
+VMPAYMENT_ARSENALPAY_SIGN_KEY_DESC="Для проверки подписи обратных запросов."
 VMPAYMENT_ARSENALPAY_ALLOWED_IP="Разрешенный IP-адрес"
-VMPAYMENT_ARSENALPAY_ALLOWED_IP_DESC="С которого будут разрешены обратные запросы от сервера ArsenalPay."
-VMPAYMENT_ARSENALPAY_PAYER_CALLBACK_URL="URL для обратного запроса"
+VMPAYMENT_ARSENALPAY_ALLOWED_IP_DESC="Только с которого будут разрешены обратные запросы о подтверждении платежей от ArsenalPay."
+VMPAYMENT_ARSENALPAY_PAYER_CALLBACK_URL="URL для проверки"
 VMPAYMENT_ARSENALPAY_PAYER_CALLBACK_URL_DESC="На проверку номера заказа."
 VMPAYMENT_ARSENALPAY_PAYMENT_CALLBACK_URL="URL для обратного запроса"
 VMPAYMENT_ARSENALPAY_PAYMENT_CALLBACK_URL_DESC="На подтверждение платежа."
 VMPAYMENT_ARSENALPAY_STATUS_PENDING="Статус заказа на время ожидания оплаты"
 VMPAYMENT_ARSENALPAY_STATUS_CONFIRMED="Статус заказа после подтверждения платежа"
 VMPAYMENT_ARSENALPAY_STATUS_CANCELLED="Статус заказа после неудавшегося платежа"
-VMPAYMENT_ARSENALPAY_STATUS_PENDING_EXPLAIN=""
-VMPAYMENT_ARSENALPAY_STATUS_CONFIRMED_EXPLAIN=""
-VMPAYMENT_ARSENALPAY_STATUS_CANCELLED_EXPLAIN=""
 VMPAYMENT_ARSENALPAY_FRAME_MODE="Режим отображения фрейма"
-VMPAYMENT_ARSENALPAY_FRAME_MODE_DESC="«1»-отображать внутри iFrame,
-иначе-на всю страницу."
-VMPAYMENT_ARSENALPAY_FRAME_PARAMS_SECTION="Параметры отображения iFrame"
-VMPAYMENT_ARSENALPAY_FRAME_PARAMS_SECTION_DESC="Здесь вы можете задать параметры iframe, чтобы изменить отображение платежного фрейма."
+VMPAYMENT_ARSENALPAY_FRAME_MODE_DESC="1 - отображать фрейм внутри страницы сайта, иначе - на странице фрейма."
+VMPAYMENT_ARSENALPAY_FRAME_PARAMS_SECTION="Параметры отображения iframe"
+VMPAYMENT_ARSENALPAY_FRAME_PARAMS_SECTION_DESC="Здесь вы можете задать параметры отображения платежного фрейма."
 VMPAYMENT_ARSENALPAY_FRAME_WIDTH="Ширина фрейма"
 VMPAYMENT_ARSENALPAY_FRAME_HEIGHT="Высота фрейма"
 VMPAYMENT_ARSENALPAY_FRAME_BORDER="Граница фрейма"
-VMPAYMENT_ARSENALPAY_FRAME_BORDER_TIP="«0» — границы видимы (по умолчанию), «1» — не видимы."
+VMPAYMENT_ARSENALPAY_FRAME_BORDER_TIP="0 — границы видимы (по умолчанию), 1 — не видимы."
 VMPAYMENT_ARSENALPAY_FRAME_SCROLLING="Прокрутка"
-VMPAYMENT_ARSENALPAY_FRAME_SCROLLING_TIP="auto — Прокрутка появляется при необходимости (по умоланию);</br>
-                                          yes — прокрутка всегда показывается; </br>
-                                          no — прокрутка никогда не показывается."
+VMPAYMENT_ARSENALPAY_FRAME_SCROLLING_TIP="</br> auto — прокрутка появляется при необходимости (по умоланию);</br>
+                                          yes — прокрутка всегда видна; </br>
+                                          no — прокрутка никогда не видна."
 
 VMPAYMENT_ARSENALPAY_RESTRICTIONS_SECTION="Ограничения"
 VMPAYMENT_ARSENALPAY_RESTRICTIONS_SECTION_DESC="Этот раздел позволяет задавать ограничения на оплату."
