--- a/language/en-GB/en-GB.plg_vmpayment_arsenalpay.ini
+++ b/language/en-GB/en-GB.plg_vmpayment_arsenalpay.ini
@@ -6,28 +6,28 @@ VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CANCELLED="Payment cancelled by Arsenalpay"
 
 VMPAYMENT_ARSENALPAY_SETUP_SECTION="ArsenalPay setup parameters"
 VMPAYMENT_ARSENALPAY_SETUP_DESC="Basic settings for ArsenalPay payment plugin behaviour."
-VMPAYMENT_ARSENALPAY_UNIQUE_ID="Unique token"
+VMPAYMENT_ARSENALPAY_UNIQUE_ID="Unique token *"
 VMPAYMENT_ARSENALPAY_UNIQUE_ID_DESC="Assigned to merchant for access to ArsenalPay payment frame."
-VMPAYMENT_ARSENALPAY_FRAME_URL="Frame URL"
+VMPAYMENT_ARSENALPAY_FRAME_URL="Frame URL *"
 VMPAYMENT_ARSENALPAY_FRAME_URL_DESC="URL-address of ArsenalPay payment frame."
-VMPAYMENT_ARSENALPAY_PAYMENT_SRC="Payment type"
+VMPAYMENT_ARSENALPAY_PAYMENT_SRC="src parameter"
 VMPAYMENT_ARSENALPAY_PAYMENT_SRC_DESC="mk - payment from mobile phone account (mobile-commerce). card - payment from plastic card (internet acquiring)."
 VMPAYMENT_ARSENALPAY_CSS_FILE="css parameter"
 VMPAYMENT_ARSENALPAY_CSS_FILE_DESC="URL of CSS file if exists."
-VMPAYMENT_ARSENALPAY_SIGN_KEY="Sign key"
+VMPAYMENT_ARSENALPAY_SIGN_KEY="Sign key *"
 VMPAYMENT_ARSENALPAY_SIGN_KEY_DESC="With this key you check a validity of sign that comes with callback payment data."
-VMPAYMENT_ARSENALPAY_ALLOWED_IP="Allowed IP address"
-VMPAYMENT_ARSENALPAY_ALLOWED_IP_DESC="It can be allowed to receive ArsenalPay payment confirmation callback requests only from the ip address pointed out here."
+VMPAYMENT_ARSENALPAY_ALLOWED_IP="Allowed IP-address"
+VMPAYMENT_ARSENALPAY_ALLOWED_IP_DESC="It can be allowed to receive ArsenalPay payment confirmation callback requests only from the IP-address pointed out here."
 VMPAYMENT_ARSENALPAY_PAYER_CALLBACK_URL="Check URL"
 VMPAYMENT_ARSENALPAY_PAYER_CALLBACK_URL_DESC="To check an order number before payment processing."
-VMPAYMENT_ARSENALPAY_PAYMENT_CALLBACK_URL="Callback URL"
+VMPAYMENT_ARSENALPAY_PAYMENT_CALLBACK_URL="Callback URL *"
 VMPAYMENT_ARSENALPAY_PAYMENT_CALLBACK_URL_DESC="For payment confirmation."
 VMPAYMENT_ARSENALPAY_STATUS_PENDING="Order Status for Pending transactions"
 VMPAYMENT_ARSENALPAY_STATUS_CONFIRMED="Order Status for Confirmed transactions"
 VMPAYMENT_ARSENALPAY_STATUS_CANCELLED="Order Status for Cancelled transactions"
-VMPAYMENT_ARSENALPAY_FRAME_MODE="Frame mode"
-VMPAYMENT_ARSENALPAY_FRAME_MODE_DESC="1 will mean that frame will be displayed inside your site, otherwise it will be displayed in a frame page."
-VMPAYMENT_ARSENALPAY_FRAME_PARAMS_SECTION="ArsenalPay payment frame parameters"
+VMPAYMENT_ARSENALPAY_FRAME_MODE="To display payment page inside frame"
+VMPAYMENT_ARSENALPAY_FRAME_MODE_DESC="Yes - inside frame at your site, No - to redirect to payment page."
+VMPAYMENT_ARSENALPAY_FRAME_PARAMS_SECTION="Other ArsenalPay payment frame parameters"
 VMPAYMENT_ARSENALPAY_FRAME_PARAMS_SECTION_DESC="Here you can set ifame parameters and so modify how ArsenalPay payment frame will be displayed."
 VMPAYMENT_ARSENALPAY_FRAME_WIDTH="Frame width"
 VMPAYMENT_ARSENALPAY_FRAME_HEIGHT="Frame height"
