--- a/language/ru-RU/ru-RU.plg_vmpayment_arsenalpay.ini
+++ b/language/ru-RU/ru-RU.plg_vmpayment_arsenalpay.ini
@@ -6,28 +6,28 @@ VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CANCELLED="Платеж отменен Arsen
 
 VMPAYMENT_ARSENALPAY_SETUP_SECTION="Настройка параметров ArsenalPay"
 VMPAYMENT_ARSENALPAY_SETUP_DESC="Основые настройки платежного плагина ArsenalPay."
-VMPAYMENT_ARSENALPAY_UNIQUE_ID="Уникальный токен"
+VMPAYMENT_ARSENALPAY_UNIQUE_ID="Уникальный токен *"
 VMPAYMENT_ARSENALPAY_UNIQUE_ID_DESC="Присваивается предприятию для доступа к платежному фрейму."
-VMPAYMENT_ARSENALPAY_FRAME_URL="URL-адрес фрейма"
+VMPAYMENT_ARSENALPAY_FRAME_URL="URL фрейма *"
 VMPAYMENT_ARSENALPAY_FRAME_URL_DESC="URL-адрес платежного фрейма ArsenalPay."
-VMPAYMENT_ARSENALPAY_PAYMENT_SRC="Тип оплаты"
+VMPAYMENT_ARSENALPAY_PAYMENT_SRC="Параметр src"
 VMPAYMENT_ARSENALPAY_PAYMENT_SRC_DESC="mk - оплата с мобильного телефона (мобильная коммерция). card - оплата с пластиковой карты (интернет эквайринг)."
 VMPAYMENT_ARSENALPAY_CSS_FILE="Параметр css"
 VMPAYMENT_ARSENALPAY_CSS_FILE_DESC="Aдрес (URL) CSS файла."
-VMPAYMENT_ARSENALPAY_SIGN_KEY="Ключ (key)"
+VMPAYMENT_ARSENALPAY_SIGN_KEY="Ключ *"
 VMPAYMENT_ARSENALPAY_SIGN_KEY_DESC="Для проверки подписи обратных запросов."
 VMPAYMENT_ARSENALPAY_ALLOWED_IP="Разрешенный IP-адрес"
-VMPAYMENT_ARSENALPAY_ALLOWED_IP_DESC="Только с которого будут разрешены обратные запросы о подтверждении платежей от ArsenalPay."
+VMPAYMENT_ARSENALPAY_ALLOWED_IP_DESC="IP-адрес, только с которого будут разрешены обратные запросы о подтверждении платежей от ArsenalPay."
 VMPAYMENT_ARSENALPAY_PAYER_CALLBACK_URL="URL для проверки"
 VMPAYMENT_ARSENALPAY_PAYER_CALLBACK_URL_DESC="На проверку номера заказа."
-VMPAYMENT_ARSENALPAY_PAYMENT_CALLBACK_URL="URL для обратного запроса"
+VMPAYMENT_ARSENALPAY_PAYMENT_CALLBACK_URL="URL для обратного запроса *"
 VMPAYMENT_ARSENALPAY_PAYMENT_CALLBACK_URL_DESC="На подтверждение платежа."
 VMPAYMENT_ARSENALPAY_STATUS_PENDING="Статус заказа на время ожидания оплаты"
 VMPAYMENT_ARSENALPAY_STATUS_CONFIRMED="Статус заказа после подтверждения платежа"
 VMPAYMENT_ARSENALPAY_STATUS_CANCELLED="Статус заказа после неудавшегося платежа"
-VMPAYMENT_ARSENALPAY_FRAME_MODE="Режим отображения фрейма"
-VMPAYMENT_ARSENALPAY_FRAME_MODE_DESC="1 - отображать фрейм внутри страницы сайта, иначе - на странице фрейма."
-VMPAYMENT_ARSENALPAY_FRAME_PARAMS_SECTION="Параметры отображения iframe"
+VMPAYMENT_ARSENALPAY_FRAME_MODE="Отображать платежную страницу внутри фрейма"
+VMPAYMENT_ARSENALPAY_FRAME_MODE_DESC="Да - внутри фрейма на вашем сайте, Нет - перенаправлять на платежную страницу."
+VMPAYMENT_ARSENALPAY_FRAME_PARAMS_SECTION="Дополнительные параметры фрейма"
 VMPAYMENT_ARSENALPAY_FRAME_PARAMS_SECTION_DESC="Здесь вы можете задать параметры отображения платежного фрейма."
 VMPAYMENT_ARSENALPAY_FRAME_WIDTH="Ширина фрейма"
 VMPAYMENT_ARSENALPAY_FRAME_HEIGHT="Высота фрейма"
