--- a/language/en-GB/en-GB.plg_vmpayment_arsenalpay.ini
+++ b/language/en-GB/en-GB.plg_vmpayment_arsenalpay.ini
@@ -26,7 +26,7 @@ VMPAYMENT_ARSENALPAY_STATUS_PENDING="Order Status for Pending transactions"
 VMPAYMENT_ARSENALPAY_STATUS_CONFIRMED="Order Status for Confirmed transactions"
 VMPAYMENT_ARSENALPAY_STATUS_CANCELLED="Order Status for Cancelled transactions"
 VMPAYMENT_ARSENALPAY_FRAME_MODE="To display payment page inside frame"
-VMPAYMENT_ARSENALPAY_FRAME_MODE_DESC="Yes - inside frame at your site, No - to redirect to payment page."
+VMPAYMENT_ARSENALPAY_FRAME_MODE_DESC="Yes - inside frame at your site, No - redirect to payment page."
 VMPAYMENT_ARSENALPAY_FRAME_PARAMS_SECTION="Other ArsenalPay payment frame parameters"
 VMPAYMENT_ARSENALPAY_FRAME_PARAMS_SECTION_DESC="Here you can set ifame parameters and so modify how ArsenalPay payment frame will be displayed."
 VMPAYMENT_ARSENALPAY_FRAME_WIDTH="Frame width"
