Joomla3 support tested

--- a/language/en-GB/en-GB.plg_vmpayment_arsenalpay.ini
+++ b/language/en-GB/en-GB.plg_vmpayment_arsenalpay.ini
@@ -10,7 +10,7 @@ VMPAYMENT_ARSENALPAY_UNIQUE_ID="Unique token *"
 VMPAYMENT_ARSENALPAY_UNIQUE_ID_DESC="Assigned to merchant for access to ArsenalPay payment frame."
 VMPAYMENT_ARSENALPAY_FRAME_URL="Frame URL *"
 VMPAYMENT_ARSENALPAY_FRAME_URL_DESC="URL-address of ArsenalPay payment frame."
-VMPAYMENT_ARSENALPAY_PAYMENT_SRC="src parameter"
+VMPAYMENT_ARSENALPAY_PAYMENT_SRC="Payment type"
 VMPAYMENT_ARSENALPAY_PAYMENT_SRC_DESC="mk - payment from mobile phone account (mobile-commerce). card - payment from plastic card (internet acquiring)."
 VMPAYMENT_ARSENALPAY_CSS_FILE="css parameter"
 VMPAYMENT_ARSENALPAY_CSS_FILE_DESC="URL of CSS file if exists."
