--- a/language/ru-RU/ru-RU.plg_vmpayment_arsenalpay.ini
+++ b/language/ru-RU/ru-RU.plg_vmpayment_arsenalpay.ini
@@ -8,9 +8,9 @@ VMPAYMENT_ARSENALPAY_SETUP_SECTION="Настройка параметров Arse
 VMPAYMENT_ARSENALPAY_SETUP_DESC="Основые настройки платежного плагина ArsenalPay."
 VMPAYMENT_ARSENALPAY_UNIQUE_ID="Уникальный токен *"
 VMPAYMENT_ARSENALPAY_UNIQUE_ID_DESC="Присваивается предприятию для доступа к платежному фрейму."
-VMPAYMENT_ARSENALPAY_FRAME_URL="URL фрейма *"
+VMPAYMENT_ARSENALPAY_FRAME_URL="URL-адрес фрейма *"
 VMPAYMENT_ARSENALPAY_FRAME_URL_DESC="URL-адрес платежного фрейма ArsenalPay."
-VMPAYMENT_ARSENALPAY_PAYMENT_SRC="Параметр src"
+VMPAYMENT_ARSENALPAY_PAYMENT_SRC="Тип оплаты"
 VMPAYMENT_ARSENALPAY_PAYMENT_SRC_DESC="mk - оплата с мобильного телефона (мобильная коммерция). card - оплата с пластиковой карты (интернет эквайринг)."
 VMPAYMENT_ARSENALPAY_CSS_FILE="Параметр css"
 VMPAYMENT_ARSENALPAY_CSS_FILE_DESC="Aдрес (URL) CSS файла."
