--- a/language/en-GB/en-GB.plg_vmpayment_arsenalpay.ini
+++ b/language/en-GB/en-GB.plg_vmpayment_arsenalpay.ini
@@ -1,8 +1,9 @@
 ARSENALPAY_PAYMENT_NAME="ArsenalPay payment name"
 ARSENALPAY_PAYMENT_TOTAL_CURRENCY="ArsenalPay total currency"
 VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_WAITING="Payment waited by ArsenalPay"
-VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CONFIRMED="Payment confirmed by ArsenalPay"
-VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CANCELLED="Payment cancelled by Arsenalpay"
+VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CONFIRMED="ArsenalPay payment confirmed for order %s with amount=%s."
+VMPAYMENT_ARSENALPAY_LESS_PAYMENT_STATUS_CONFIRMED="ArsenalPay payment confirmed for order %s with less amount=%s."
+VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CANCELLED="ArsenalPay payment cancelled for order %s."
 
 VMPAYMENT_ARSENALPAY_SETUP_SECTION="ArsenalPay setup parameters"
 VMPAYMENT_ARSENALPAY_SETUP_DESC="Basic settings for ArsenalPay payment plugin behaviour."
