--- a/language/ru-RU/ru-RU.plg_vmpayment_arsenalpay.ini
+++ b/language/ru-RU/ru-RU.plg_vmpayment_arsenalpay.ini
@@ -1,8 +1,9 @@
 ARSENALPAY_PAYMENT_NAME="Название платежного метода ArsenalPay"
 ARSENALPAY_PAYMENT_TOTAL_CURRENCY="Общая сумма платежа с ArsenalPay"
 VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_WAITING="Ожидаемый к оплате платеж с ArsenalPay"
-VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CONFIRMED="Платеж подтвержден ArsenalPay"
-VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CANCELLED="Платеж отменен ArsenalPay"
+VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CONFIRMED="Платеж ArsenalPay для заказа %s подтвержден с суммой %s."
+VMPAYMENT_ARSENALPAY_LESS_PAYMENT_STATUS_CONFIRMED="Платеж ArsenalPay для заказа %s подтвержден с меньшей суммой %s."
+VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CANCELLED="Платеж ArsenalPay для заказа %s отменен."
 
 VMPAYMENT_ARSENALPAY_SETUP_SECTION="Настройка параметров ArsenalPay"
 VMPAYMENT_ARSENALPAY_SETUP_DESC="Основые настройки платежного плагина ArsenalPay."
