--- a/language/en-GB/en-GB.plg_vmpayment_arsenalpay.ini
+++ b/language/en-GB/en-GB.plg_vmpayment_arsenalpay.ini
@@ -1,61 +1,49 @@
-ARSENALPAY_PAYMENT_NAME="ArsenalPay payment name"
-ARSENALPAY_PAYMENT_TOTAL_CURRENCY="ArsenalPay total currency"
-VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_WAITING="Payment waited by ArsenalPay"
-VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CONFIRMED="ArsenalPay payment confirmed for order %s with amount=%s."
-VMPAYMENT_ARSENALPAY_LESS_PAYMENT_STATUS_CONFIRMED="ArsenalPay payment confirmed for order %s with less amount=%s."
-VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CANCELLED="ArsenalPay payment cancelled for order %s."
+ARSENALPAY_PAYMENT_NAME = "ArsenalPay payment name"
+ARSENALPAY_PAYMENT_TOTAL_CURRENCY = "ArsenalPay total currency"
+VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_PENDING = "Payment waited by ArsenalPay"
+VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CONFIRMED = "ArsenalPay payment confirmed for order %s with amount=%s."
+VMPAYMENT_ARSENALPAY_LESS_PAYMENT_STATUS_CONFIRMED = "ArsenalPay payment confirmed for order %s with less amount=%s."
+VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CANCELLED = "ArsenalPay payment cancelled for order %s."
+VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_HOLDEN = "ArsenalPay payment holden for order %s."
+VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_REFUNDED = "ArsenalPay payment refunded for order %s, refunded amount is %s."
+VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_REVERSED = "ArsenalPay payment reversed for order %s, reversed amount is %s."
 
-VMPAYMENT_ARSENALPAY_SETUP_SECTION="ArsenalPay setup parameters"
-VMPAYMENT_ARSENALPAY_SETUP_DESC="Basic settings for ArsenalPay payment plugin behaviour."
-VMPAYMENT_ARSENALPAY_UNIQUE_ID="Unique token *"
-VMPAYMENT_ARSENALPAY_UNIQUE_ID_DESC="Assigned to merchant for access to ArsenalPay payment frame."
-VMPAYMENT_ARSENALPAY_FRAME_URL="Frame URL *"
-VMPAYMENT_ARSENALPAY_FRAME_URL_DESC="URL-address of ArsenalPay payment frame."
-VMPAYMENT_ARSENALPAY_PAYMENT_SRC="Payment type"
-VMPAYMENT_ARSENALPAY_PAYMENT_SRC_DESC="mk - payment from mobile phone account (mobile-commerce). card - payment from plastic card (internet acquiring)."
-VMPAYMENT_ARSENALPAY_CSS_FILE="css parameter"
-VMPAYMENT_ARSENALPAY_CSS_FILE_DESC="URL of CSS file if exists."
-VMPAYMENT_ARSENALPAY_SIGN_KEY="Sign key *"
-VMPAYMENT_ARSENALPAY_SIGN_KEY_DESC="With this key you check a validity of sign that comes with callback payment data."
-VMPAYMENT_ARSENALPAY_ALLOWED_IP="Allowed IP-address"
-VMPAYMENT_ARSENALPAY_ALLOWED_IP_DESC="It can be allowed to receive ArsenalPay payment confirmation callback requests only from the IP-address pointed out here."
-VMPAYMENT_ARSENALPAY_PAYER_CALLBACK_URL="Check URL"
-VMPAYMENT_ARSENALPAY_PAYER_CALLBACK_URL_DESC="To check an order number before payment processing."
-VMPAYMENT_ARSENALPAY_PAYMENT_CALLBACK_URL="Callback URL *"
-VMPAYMENT_ARSENALPAY_PAYMENT_CALLBACK_URL_DESC="For payment confirmation."
-VMPAYMENT_ARSENALPAY_STATUS_PENDING="Order Status for Pending transactions"
-VMPAYMENT_ARSENALPAY_STATUS_CONFIRMED="Order Status for Confirmed transactions"
-VMPAYMENT_ARSENALPAY_STATUS_CANCELLED="Order Status for Cancelled transactions"
-VMPAYMENT_ARSENALPAY_FRAME_MODE="To display payment page inside frame"
-VMPAYMENT_ARSENALPAY_FRAME_MODE_DESC="Yes - inside frame at your site, No - redirect to payment page."
-VMPAYMENT_ARSENALPAY_FRAME_PARAMS_SECTION="Other ArsenalPay payment frame parameters"
-VMPAYMENT_ARSENALPAY_FRAME_PARAMS_SECTION_DESC="Here you can set ifame parameters and so modify how ArsenalPay payment frame will be displayed."
-VMPAYMENT_ARSENALPAY_FRAME_WIDTH="Frame width"
-VMPAYMENT_ARSENALPAY_FRAME_HEIGHT="Frame height"
-VMPAYMENT_ARSENALPAY_FRAME_BORDER="Frame border"
-VMPAYMENT_ARSENALPAY_FRAME_BORDER_TIP="If 0 then border is off (default). If 1 border is on."
-VMPAYMENT_ARSENALPAY_FRAME_SCROLLING="Frame scrolling"
-VMPAYMENT_ARSENALPAY_FRAME_SCROLLING_TIP="auto - scrollbar appears if needed (this is default)</br>
-                                          yes - scrollbar is always shown </br>
-                                          no - scrollbar is never shown"
+VMPAYMENT_ARSENALPAY_SETUP_SECTION = "ArsenalPay setup parameters"
+VMPAYMENT_ARSENALPAY_SETUP_DESC = "Basic settings for ArsenalPay payment plugin behaviour."
+VMPAYMENT_ARSENALPAY_WIDGET_ID = "Widget ID *"
+VMPAYMENT_ARSENALPAY_WIDGET_ID_DESC = "Assigned to merchant for access to ArsenalPay payment widget."
+VMPAYMENT_ARSENALPAY_WIDGET_KEY = "Widget Key *"
+VMPAYMENT_ARSENALPAY_WIDGET_KEY_DESC = "Assigned to merchant for access to ArsenalPay payment widget."
+VMPAYMENT_ARSENALPAY_CALLBACK_KEY = "Callback key *"
+VMPAYMENT_ARSENALPAY_CALLBACK_KEY_DESC = "With this key you check a validity of sign that comes with callback payment data."
+VMPAYMENT_ARSENALPAY_PAYMENT_CALLBACK_URL = "Callback URL *"
+VMPAYMENT_ARSENALPAY_PAYMENT_CALLBACK_URL_DESC = "For payment confirmation."
+VMPAYMENT_ARSENALPAY_STATUS_PENDING = "Order Status for Pending transactions"
+VMPAYMENT_ARSENALPAY_STATUS_CONFIRMED = "Order Status for Confirmed transactions"
+VMPAYMENT_ARSENALPAY_STATUS_CANCELLED = "Order Status for Cancelled transactions"
+VMPAYMENT_ARSENALPAY_STATUS_REFUNDED = "Order Status for Refunded transactions"
+VMPAYMENT_ARSENALPAY_STATUS_REVERSED = "Order Status for Reversed transactions"
+VMPAYMENT_ARSENALPAY_STATUS_HOLDEN = "Order Status for Holden transactions"
+VMPAYMENT_ARSENALPAY_ALLOWED_IP = "Allowed IP-address"
+VMPAYMENT_ARSENALPAY_ALLOWED_IP_DESC = "It can be allowed to receive ArsenalPay payment confirmation callback requests only from the IP-address pointed out here."
 
-VMPAYMENT_ARSENALPAY_RESTRICTIONS_SECTION="Restrictions"
-VMPAYMENT_ARSENALPAY_RESTRICTIONS_SECTION_DESC="This section describes restriction parameters on payments."
-VMPAYMENT_ARSENALPAY_COUNTRIES="Countries"
-VMPAYMENT_ARSENALPAY_COUNTRIES_DESC="If you want this payment method to be visible only to customers in certain countries, select the countries from the drop-down list. Otherwise, leave blank."
-VMPAYMENT_ARSENALPAY_MIN_AMOUNT="Min amount"
-VMPAYMENT_ARSENALPAY_MIN_AMOUNT_TIP="If you want this payment method to appear only if a customer's order is above a certain amount, enter the minimum amount in the vendor currency here."
-VMPAYMENT_ARSENALPAY_MAX_AMOUNT="Max amount"
-VMPAYMENT_ARSENALPAY_MAX_AMOUNT_TIP="If you want this payment method to appear only if a customer's order is below a certain amount, enter the maximum amount in the vendor currency here."
+VMPAYMENT_ARSENALPAY_RESTRICTIONS_SECTION = "Restrictions"
+VMPAYMENT_ARSENALPAY_RESTRICTIONS_SECTION_DESC = "This section describes restriction parameters on payments."
+VMPAYMENT_ARSENALPAY_COUNTRIES = "Countries"
+VMPAYMENT_ARSENALPAY_COUNTRIES_DESC = "If you want this payment method to be visible only to customers in certain countries, select the countries from the drop-down list. Otherwise, leave blank."
+VMPAYMENT_ARSENALPAY_MIN_AMOUNT = "Min amount"
+VMPAYMENT_ARSENALPAY_MIN_AMOUNT_TIP = "If you want this payment method to appear only if a customer's order is above a certain amount, enter the minimum amount in the vendor currency here."
+VMPAYMENT_ARSENALPAY_MAX_AMOUNT = "Max amount"
+VMPAYMENT_ARSENALPAY_MAX_AMOUNT_TIP = "If you want this payment method to appear only if a customer's order is below a certain amount, enter the maximum amount in the vendor currency here."
 
-VMPAYMENT_ARSENALPAY_FEE_SECTION="Discounts and Fees"
-VMPAYMENT_ARSENALPAY_FEE_SECTION_DESC="Enter discounts or Fees that will be applied when the payment option is selected"
-VMPAYMENT_ARSENALPAY_COST_PER_TRANSACTION=Fee per transaction
-VMPAYMENT_ARSENALPAY_COST_PER_TRANSACTION_EXPLAIN="Flat amount to apply per transaction"
-VMPAYMENT_ARSENALPAY_COST_PERCENT_TOTAL="Fee or cashback in percent of the total amount."
-VMPAYMENT_ARSENALPAY_COST_PERCENT_TOTAL_EXPLAIN="Added or subtracted in the cart view. Enter for example Credit Cart fee as 2, Cashback as -2"
-VMPAYMENT_ARSENALPAY_TAX="Tax"
-VMPAYMENT_ARSENALPAY_TAX_DESC="Tax to apply to the fee"
+VMPAYMENT_ARSENALPAY_FEE_SECTION = "Discounts and Fees"
+VMPAYMENT_ARSENALPAY_FEE_SECTION_DESC = "Enter discounts or Fees that will be applied when the payment option is selected"
+VMPAYMENT_ARSENALPAY_COST_PER_TRANSACTION = Fee per transaction
+VMPAYMENT_ARSENALPAY_COST_PER_TRANSACTION_EXPLAIN = "Flat amount to apply per transaction"
+VMPAYMENT_ARSENALPAY_COST_PERCENT_TOTAL = "Fee or cashback in percent of the total amount."
+VMPAYMENT_ARSENALPAY_COST_PERCENT_TOTAL_EXPLAIN = "Added or subtracted in the cart view. Enter for example Credit Cart fee as 2, Cashback as -2"
+VMPAYMENT_ARSENALPAY_TAX = "Tax"
+VMPAYMENT_ARSENALPAY_TAX_DESC = "Tax to apply to the fee"
 
-VMPAYMENT_ARSENALPAY_LOGOS="Logos"
-VMPAYMENT_ARSENALPAY_LOGOS_DESC="Logos to be displayed with the payment name"
+VMPAYMENT_ARSENALPAY_LOGOS = "Logos"
+VMPAYMENT_ARSENALPAY_LOGOS_DESC = "Logos to be displayed with the payment name"
