--- a/language/ru-RU/ru-RU.plg_vmpayment_arsenalpay.ini
+++ b/language/ru-RU/ru-RU.plg_vmpayment_arsenalpay.ini
@@ -1,61 +1,49 @@
-ARSENALPAY_PAYMENT_NAME="Название платежного метода ArsenalPay"
-ARSENALPAY_PAYMENT_TOTAL_CURRENCY="Общая сумма платежа с ArsenalPay"
-VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_WAITING="Ожидаемый к оплате платеж с ArsenalPay"
-VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CONFIRMED="Платеж ArsenalPay для заказа %s подтвержден с суммой %s."
-VMPAYMENT_ARSENALPAY_LESS_PAYMENT_STATUS_CONFIRMED="Платеж ArsenalPay для заказа %s подтвержден с меньшей суммой %s."
-VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CANCELLED="Платеж ArsenalPay для заказа %s отменен."
+ARSENALPAY_PAYMENT_NAME = "Название платежного метода ArsenalPay"
+ARSENALPAY_PAYMENT_TOTAL_CURRENCY = "Общая сумма платежа с ArsenalPay"
+VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_PENDING = "Ожидаемый к оплате платеж с ArsenalPay"
+VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CONFIRMED = "Платеж ArsenalPay для заказа %s подтвержден с суммой %s."
+VMPAYMENT_ARSENALPAY_LESS_PAYMENT_STATUS_CONFIRMED = "Платеж ArsenalPay для заказа %s подтвержден с меньшей суммой %s."
+VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CANCELLED = "Платеж ArsenalPay для заказа %s отменен."
+VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_HOLDEN = "Arsenalpay: Денежные средства для заказа %s зарезервированы."
+VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_REFUNDED = "Платеж ArsenalPay для заказа %s возвращен частично в размере %s."
+VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_REVERSED = "Платеж ArsenalPay для заказа %s полностью возвращен в размере %s."
 
-VMPAYMENT_ARSENALPAY_SETUP_SECTION="Настройка параметров ArsenalPay"
-VMPAYMENT_ARSENALPAY_SETUP_DESC="Основые настройки платежного плагина ArsenalPay."
-VMPAYMENT_ARSENALPAY_UNIQUE_ID="Уникальный токен *"
-VMPAYMENT_ARSENALPAY_UNIQUE_ID_DESC="Присваивается предприятию для доступа к платежному фрейму."
-VMPAYMENT_ARSENALPAY_FRAME_URL="URL-адрес фрейма *"
-VMPAYMENT_ARSENALPAY_FRAME_URL_DESC="URL-адрес платежного фрейма ArsenalPay."
-VMPAYMENT_ARSENALPAY_PAYMENT_SRC="Тип оплаты"
-VMPAYMENT_ARSENALPAY_PAYMENT_SRC_DESC="mk - оплата с мобильного телефона (мобильная коммерция). card - оплата с пластиковой карты (интернет эквайринг)."
-VMPAYMENT_ARSENALPAY_CSS_FILE="Параметр css"
-VMPAYMENT_ARSENALPAY_CSS_FILE_DESC="Aдрес (URL) CSS файла."
-VMPAYMENT_ARSENALPAY_SIGN_KEY="Ключ *"
-VMPAYMENT_ARSENALPAY_SIGN_KEY_DESC="Для проверки подписи обратных запросов."
-VMPAYMENT_ARSENALPAY_ALLOWED_IP="Разрешенный IP-адрес"
-VMPAYMENT_ARSENALPAY_ALLOWED_IP_DESC="IP-адрес, только с которого будут разрешены обратные запросы о подтверждении платежей от ArsenalPay."
-VMPAYMENT_ARSENALPAY_PAYER_CALLBACK_URL="URL для проверки"
-VMPAYMENT_ARSENALPAY_PAYER_CALLBACK_URL_DESC="На проверку номера заказа."
-VMPAYMENT_ARSENALPAY_PAYMENT_CALLBACK_URL="URL для обратного запроса *"
-VMPAYMENT_ARSENALPAY_PAYMENT_CALLBACK_URL_DESC="На подтверждение платежа."
-VMPAYMENT_ARSENALPAY_STATUS_PENDING="Статус заказа на время ожидания оплаты"
-VMPAYMENT_ARSENALPAY_STATUS_CONFIRMED="Статус заказа после подтверждения платежа"
-VMPAYMENT_ARSENALPAY_STATUS_CANCELLED="Статус заказа после неудавшегося платежа"
-VMPAYMENT_ARSENALPAY_FRAME_MODE="Отображать платежную страницу внутри фрейма"
-VMPAYMENT_ARSENALPAY_FRAME_MODE_DESC="Да - внутри фрейма на вашем сайте, Нет - перенаправлять на платежную страницу."
-VMPAYMENT_ARSENALPAY_FRAME_PARAMS_SECTION="Дополнительные параметры фрейма"
-VMPAYMENT_ARSENALPAY_FRAME_PARAMS_SECTION_DESC="Здесь вы можете задать параметры отображения платежного фрейма."
-VMPAYMENT_ARSENALPAY_FRAME_WIDTH="Ширина фрейма"
-VMPAYMENT_ARSENALPAY_FRAME_HEIGHT="Высота фрейма"
-VMPAYMENT_ARSENALPAY_FRAME_BORDER="Граница фрейма"
-VMPAYMENT_ARSENALPAY_FRAME_BORDER_TIP="0 — границы видимы (по умолчанию), 1 — не видимы."
-VMPAYMENT_ARSENALPAY_FRAME_SCROLLING="Прокрутка"
-VMPAYMENT_ARSENALPAY_FRAME_SCROLLING_TIP="</br> auto — прокрутка появляется при необходимости (по умоланию);</br>
-                                          yes — прокрутка всегда видна; </br>
-                                          no — прокрутка никогда не видна."
+VMPAYMENT_ARSENALPAY_SETUP_SECTION = "Настройка параметров ArsenalPay"
+VMPAYMENT_ARSENALPAY_SETUP_DESC = "Основые настройки платежного плагина ArsenalPay."
+VMPAYMENT_ARSENALPAY_WIDGET_ID = "Widget ID *"
+VMPAYMENT_ARSENALPAY_WIDGET_ID_DESC = "Присваивается предприятию для доступа к платежному виджету."
+VMPAYMENT_ARSENALPAY_WIDGET_KEY = "Widget Key *"
+VMPAYMENT_ARSENALPAY_WIDGET_KEY_DESC = "Присваивается предприятию для доступа к платежному виджету."
+VMPAYMENT_ARSENALPAY_CALLBACK_KEY = "Callback key *"
+VMPAYMENT_ARSENALPAY_CALLBACK_KEY_DESC = "Для проверки подписи обратных запросов."
+VMPAYMENT_ARSENALPAY_PAYMENT_CALLBACK_URL = "URL для обратного запроса *"
+VMPAYMENT_ARSENALPAY_PAYMENT_CALLBACK_URL_DESC = "На подтверждение платежа."
+VMPAYMENT_ARSENALPAY_STATUS_PENDING = "Статус заказа на время ожидания оплаты"
+VMPAYMENT_ARSENALPAY_STATUS_CONFIRMED = "Статус заказа после подтверждения платежа"
+VMPAYMENT_ARSENALPAY_STATUS_CANCELLED = "Статус заказа после неудавшегося платежа"
+VMPAYMENT_ARSENALPAY_STATUS_REFUNDED = "Статус заказа после частично возврата платежа"
+VMPAYMENT_ARSENALPAY_STATUS_REVERSED = "Статус заказа после полного возврата платежа"
+VMPAYMENT_ARSENALPAY_STATUS_HOLDEN = "Статус заказа для случая, когда средства на карте были зарезервированы, но еще не списаны"
+VMPAYMENT_ARSENALPAY_ALLOWED_IP = "Разрешенный IP-адрес"
+VMPAYMENT_ARSENALPAY_ALLOWED_IP_DESC = "IP-адрес, только с которого будут разрешены обратные запросы о подтверждении платежей от ArsenalPay."
 
-VMPAYMENT_ARSENALPAY_RESTRICTIONS_SECTION="Ограничения"
-VMPAYMENT_ARSENALPAY_RESTRICTIONS_SECTION_DESC="Этот раздел позволяет задавать ограничения на оплату."
-VMPAYMENT_ARSENALPAY_COUNTRIES="Страны"
-VMPAYMENT_ARSENALPAY_COUNTRIES_DESC="Если вы хотите сделать метод оплаты ArsenalPay видимым только для покупателей заданных стран, то выберите необходимые страны из низпадающего списка. Иначе оставьте это поле пустым."
-VMPAYMENT_ARSENALPAY_MIN_AMOUNT="Минимальная сумма"
-VMPAYMENT_ARSENALPAY_MIN_AMOUNT_TIP="Если вы хотите, чтобы этот метод оплаты появлялся только, когда заказ покупателя выше определенной суммы, то введите здесь минимальную сумму в денежных единицах магазина."
-VMPAYMENT_ARSENALPAY_MAX_AMOUNT="Максимальная сумма"
-VMPAYMENT_ARSENALPAY_MAX_AMOUNT_TIP="Если вы хотите, чтобы этот метод оплаты появлялся только, когда заказ покупателя ниже определенной суммы, то введите здесь максимальную сумму в денежных единицах магазина."
+VMPAYMENT_ARSENALPAY_RESTRICTIONS_SECTION = "Ограничения"
+VMPAYMENT_ARSENALPAY_RESTRICTIONS_SECTION_DESC = "Этот раздел позволяет задавать ограничения на оплату."
+VMPAYMENT_ARSENALPAY_COUNTRIES = "Страны"
+VMPAYMENT_ARSENALPAY_COUNTRIES_DESC = "Если вы хотите сделать метод оплаты ArsenalPay видимым только для покупателей заданных стран, то выберите необходимые страны из низпадающего списка. Иначе оставьте это поле пустым."
+VMPAYMENT_ARSENALPAY_MIN_AMOUNT = "Минимальная сумма"
+VMPAYMENT_ARSENALPAY_MIN_AMOUNT_TIP = "Если вы хотите, чтобы этот метод оплаты появлялся только, когда заказ покупателя выше определенной суммы, то введите здесь минимальную сумму в денежных единицах магазина."
+VMPAYMENT_ARSENALPAY_MAX_AMOUNT = "Максимальная сумма"
+VMPAYMENT_ARSENALPAY_MAX_AMOUNT_TIP = "Если вы хотите, чтобы этот метод оплаты появлялся только, когда заказ покупателя ниже определенной суммы, то введите здесь максимальную сумму в денежных единицах магазина."
 
-VMPAYMENT_ARSENALPAY_FEE_SECTION="Скидки и дополнительная плата"
-VMPAYMENT_ARSENALPAY_FEE_SECTION_DESC="Введите скидку либо дополнительную плату, которая будет применяться при выборе этого метода оплаты."
-VMPAYMENT_ARSENALPAY_COST_PER_TRANSACTION=Дополнительная плата за каждую транзакцию
-VMPAYMENT_ARSENALPAY_COST_PER_TRANSACTION_EXPLAIN="Постоянная сумма взимаемая за каждую транзакцию"
-VMPAYMENT_ARSENALPAY_COST_PERCENT_TOTAL="Начисления или бонусы в процентах от общей суммы"
-VMPAYMENT_ARSENALPAY_COST_PERCENT_TOTAL_EXPLAIN="Прибавляется или отнимается при просмотре корзины. Для примера введите за оплату кредитной картой: начисление как 2, бонус как -2"
-VMPAYMENT_ARSENALPAY_TAX="Налог"
-VMPAYMENT_ARSENALPAY_TAX_DESC="Налог", применяемый к дополнительной плате.
+VMPAYMENT_ARSENALPAY_FEE_SECTION = "Скидки и дополнительная плата"
+VMPAYMENT_ARSENALPAY_FEE_SECTION_DESC = "Введите скидку либо дополнительную плату, которая будет применяться при выборе этого метода оплаты."
+VMPAYMENT_ARSENALPAY_COST_PER_TRANSACTION = Дополнительная плата за каждую транзакцию
+VMPAYMENT_ARSENALPAY_COST_PER_TRANSACTION_EXPLAIN = "Постоянная сумма взимаемая за каждую транзакцию"
+VMPAYMENT_ARSENALPAY_COST_PERCENT_TOTAL = "Начисления или бонусы в процентах от общей суммы"
+VMPAYMENT_ARSENALPAY_COST_PERCENT_TOTAL_EXPLAIN = "Прибавляется или отнимается при просмотре корзины. Для примера введите за оплату кредитной картой: начисление как 2, бонус как -2"
+VMPAYMENT_ARSENALPAY_TAX = "Налог"
+VMPAYMENT_ARSENALPAY_TAX_DESC = "Налог", применяемый к дополнительной плате.
 
-VMPAYMENT_ARSENALPAY_LOGOS="Логотипы"
-VMPAYMENT_ARSENALPAY_LOGOS_DESC="Логотипы, которые будут отображаться вместе с именем этого метода оплаты."
+VMPAYMENT_ARSENALPAY_LOGOS = "Логотипы"
+VMPAYMENT_ARSENALPAY_LOGOS_DESC = "Логотипы, которые будут отображаться вместе с именем этого метода оплаты."
