change name of settings in admin panel (issue #3794)

--- a/language/en-GB/en-GB.plg_vmpayment_arsenalpay.ini
+++ b/language/en-GB/en-GB.plg_vmpayment_arsenalpay.ini
@@ -10,11 +10,11 @@ VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_REVERSED = "ArsenalPay payment reversed for 
 
 VMPAYMENT_ARSENALPAY_SETUP_SECTION = "ArsenalPay setup parameters"
 VMPAYMENT_ARSENALPAY_SETUP_DESC = "Basic settings for ArsenalPay payment plugin behaviour."
-VMPAYMENT_ARSENALPAY_WIDGET_ID = "Widget ID *"
+VMPAYMENT_ARSENALPAY_WIDGET_ID = "widget *"
 VMPAYMENT_ARSENALPAY_WIDGET_ID_DESC = "Assigned to merchant for access to ArsenalPay payment widget."
-VMPAYMENT_ARSENALPAY_WIDGET_KEY = "Widget Key *"
+VMPAYMENT_ARSENALPAY_WIDGET_KEY = "widgetKey *"
 VMPAYMENT_ARSENALPAY_WIDGET_KEY_DESC = "Assigned to merchant for access to ArsenalPay payment widget."
-VMPAYMENT_ARSENALPAY_CALLBACK_KEY = "Callback key *"
+VMPAYMENT_ARSENALPAY_CALLBACK_KEY = "callbackKey *"
 VMPAYMENT_ARSENALPAY_CALLBACK_KEY_DESC = "With this key you check a validity of sign that comes with callback payment data."
 VMPAYMENT_ARSENALPAY_PAYMENT_CALLBACK_URL = "Callback URL *"
 VMPAYMENT_ARSENALPAY_PAYMENT_CALLBACK_URL_DESC = "For payment confirmation."
