add ofd support

--- a/language/en-GB/en-GB.plg_vmpayment_arsenalpay.ini
+++ b/language/en-GB/en-GB.plg_vmpayment_arsenalpay.ini
@@ -1,5 +1,6 @@
 ARSENALPAY_PAYMENT_NAME = "ArsenalPay payment name"
 ARSENALPAY_PAYMENT_TOTAL_CURRENCY = "ArsenalPay total currency"
+VMPAYMENT_ARSENALPAY_WIDGET_STATUS = "Initialize the payment widget by ArsenalPay"
 VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_PENDING = "Payment waited by ArsenalPay"
 VMPAYMENT_ARSENALPAY_PAYMENT_STATUS_CONFIRMED = "ArsenalPay payment confirmed for order %s with amount=%s."
 VMPAYMENT_ARSENALPAY_LESS_PAYMENT_STATUS_CONFIRMED = "ArsenalPay payment confirmed for order %s with less amount=%s."
@@ -26,6 +27,17 @@ VMPAYMENT_ARSENALPAY_STATUS_REVERSED = "Order Status for Reversed transactions"
 VMPAYMENT_ARSENALPAY_STATUS_HOLDEN = "Order Status for Holden transactions"
 VMPAYMENT_ARSENALPAY_ALLOWED_IP = "Allowed IP-address"
 VMPAYMENT_ARSENALPAY_ALLOWED_IP_DESC = "It can be allowed to receive ArsenalPay payment confirmation callback requests only from the IP-address pointed out here."
+
+VMPAYMENT_ARSENALPAY_OFD_SECTION = "Integration with the online checkout"
+VMPAYMENT_ARSENALPAY_OFD_SECTION_DESC = "Set the parameters for receipt. Need to configure, if you have integrated with <a href='https://arsenalpay.ru/documentation.html#54-fz-integraciya-s-onlajn-kassoj'>online checkout</a>"
+VMPAYMENT_ARSENALPAY_PRODUCT_TAX = "Tax for product"
+VMPAYMENT_ARSENALPAY_SHIPMENT_TAX = "Tax for shipment"
+VMPAYMENT_ARSENALPAY_VAT_NONE = "None"
+VMPAYMENT_ARSENALPAY_VAT_0 = "VAT 0%"
+VMPAYMENT_ARSENALPAY_VAT_10 = "VAT 10%"
+VMPAYMENT_ARSENALPAY_VAT_18 = "VAT 18%"
+VMPAYMENT_ARSENALPAY_VAT_110 = "VAT 10/110"
+VMPAYMENT_ARSENALPAY_VAT_118 = "VAT 18/118"
 
 VMPAYMENT_ARSENALPAY_RESTRICTIONS_SECTION = "Restrictions"
 VMPAYMENT_ARSENALPAY_RESTRICTIONS_SECTION_DESC = "This section describes restriction parameters on payments."
