up version in xml file

--- a/language/en-GB/en-GB.plg_vmpayment_arsenalpay.ini
+++ b/language/en-GB/en-GB.plg_vmpayment_arsenalpay.ini
@@ -29,7 +29,7 @@ VMPAYMENT_ARSENALPAY_ALLOWED_IP = "Allowed IP-address"
 VMPAYMENT_ARSENALPAY_ALLOWED_IP_DESC = "It can be allowed to receive ArsenalPay payment confirmation callback requests only from the IP-address pointed out here."
 
 VMPAYMENT_ARSENALPAY_OFD_SECTION = "Integration with the online checkout"
-VMPAYMENT_ARSENALPAY_OFD_SECTION_DESC = "Set tax parameters for receipt. Configure this block, if you have integrated with <a href='https://arsenalpay.ru/documentation.html#54-fz-integraciya-s-onlajn-kassoj'>online checkout</a>"
+VMPAYMENT_ARSENALPAY_OFD_SECTION_DESC = "Configure this block, if you have integrated with <a href='https://arsenalpay.ru/documentation.html#54-fz-integraciya-s-onlajn-kassoj'>online checkout</a>. Set the tax parameters which will be sent to the Federal Tax Service"
 VMPAYMENT_ARSENALPAY_PRODUCT_TAX = "Tax for product"
 VMPAYMENT_ARSENALPAY_SHIPMENT_TAX = "Tax for shipment"
 VMPAYMENT_ARSENALPAY_VAT_NONE = "None"
