--- a/language/ru-RU/ru-RU.plg_vmpayment_arsenalpay.ini
+++ b/language/ru-RU/ru-RU.plg_vmpayment_arsenalpay.ini
@@ -29,7 +29,7 @@ VMPAYMENT_ARSENALPAY_ALLOWED_IP = "Разрешенный IP-адрес"
 VMPAYMENT_ARSENALPAY_ALLOWED_IP_DESC = "IP-адрес, только с которого будут разрешены обратные запросы о подтверждении платежей от ArsenalPay."
 
 VMPAYMENT_ARSENALPAY_OFD_SECTION = "Интеграция с онлайн кассой"
-VMPAYMENT_ARSENALPAY_OFD_SECTION_DESC = "Задайте параметры, с помощью которых формируется чек. Необходимо настроить, только если вы интегрированы с <a href='https://arsenalpay.ru/documentation.html#54-fz-integraciya-s-onlajn-kassoj'>онлайн кассой</a>"
+VMPAYMENT_ARSENALPAY_OFD_SECTION_DESC = "Этот блок необходимо настроить, только если вы интегрированы с <a href='https://arsenalpay.ru/documentation.html#54-fz-integraciya-s-onlajn-kassoj'>онлайн кассой</a>. Установите налоговые ставки для товоров и доставки, которые будут отправлены в ФНС."
 VMPAYMENT_ARSENALPAY_PRODUCT_TAX = "Налоговая ставка для товаров"
 VMPAYMENT_ARSENALPAY_SHIPMENT_TAX = "Налоговая ставка для доставки"
 VMPAYMENT_ARSENALPAY_VAT_NONE = "Без НДС"
